--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,13 @@
 .choresText {
-   color: black;
+   font-family: Arial, sans-serif; 
+   font-size: 16px; 
+   color: navy; 
+   font-style: italic;
+   text-align: left !important; 
+   background-color: aqua; 
 }
 
 .choresHeading {
    color: black;
+   text-decoration: underline; 
 }
